fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   left: 51%; 
   transform: translateX(-50%);
   width: 100%;
+  overflow-x: hidden;
 }
 
 .indexbg {
@@ -17,6 +18,7 @@
   right: 1%; 
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 
@@ -58,6 +60,7 @@ html.normal {
 
 body.main{
   line-height: 1.2;
+  overflow-x: hidden;
 }
 
 body.copy{
